# src/common/responses/bookingHistory.reponse.ts
@@ -1,5 +1,6 @@
 import { BookingStatus } from "@prisma/client";
 import { ApiModel, ApiModelProperty } from "express-swagger-typescript";
+import { UserInfomationResponse } from "./userInfomation.reponse";
 
 @ApiModel({
     description: "Booking History response",
@@ -49,6 +50,19 @@ export class BookingHistoryResponse {
         example: "a1da9857-355e-43f1-8fdb-26a8a0ace6bd",
     })
     bookerId!: string;
+    
+    @ApiModelProperty({
+        description: "Booker Infomation",
+        required: false,
+        model: UserInfomationResponse,
+        example: {
+            id: "2e82b1a6-e878-4bd5-9e08-1fa3d03cd18e",
+            name: "Christine Gutmann",
+            slug: "christine-gutmann",
+            avatarUrl: "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/123.jpg"
+        }
+    })
+    booker?: UserInfomationResponse;
 
     @ApiModelProperty({
         description: "Id's skill of provider",
@@ -70,4 +84,6 @@ export class BookingHistoryResponse {
         example: 2,
     })
     bookingPeriod?: number;
+
+
 }
