# src/common/responses/feedback.response.ts
@@ -1,6 +1,6 @@
 
 import { ApiModel, ApiModelProperty, SwaggerDefinitionConstant } from "express-swagger-typescript";
-import { BookerFeedbackResponse } from "./bookerFeedback.reponse";
+import { BookingHistoryResponse } from "./bookingHistory.reponse";
 
 @ApiModel({
     description: "Feedback response",
@@ -51,16 +51,26 @@ export class FeedbackResponse {
 
     @ApiModelProperty({
         type: SwaggerDefinitionConstant.ARRAY,
-        itemType: BookerFeedbackResponse,
-        example: [
-            {
-                id: "cee99f3c-d488-4991-a96f-5a5805987a78",
-                name: "Đỗ Trần Minh Chu",
-                gender: "MALE",
-                avatar: "https://haycafe.vn/wp-content/uploads/2022/02/anh-meo-cute-hinh-cute-meo.jpg"
-            },
-        ],
+        itemType: BookingHistoryResponse,
+        example: {
+            id: "f00ada3a-091b-4b6b-8efc-af2da32cd956",
+            createdAt: "2023-05-29T17:23:04.562Z",
+            updatedAt: "2023-05-29T17:23:04.562Z",
+            deletedAt: null,
+            status: "USER_CANCEL",
+            acceptedAt: "2023-05-28T23:49:56.469Z",
+            bookerId: "2e82b1a6-e878-4bd5-9e08-1fa3d03cd18e",
+            providerSkillId: "eaf0d5a6-e305-438d-a78b-72bbb288eec1",
+            totalCost: 194,
+            bookingPeriod: 1,
+            booker: {
+                id: "2e82b1a6-e878-4bd5-9e08-1fa3d03cd18e",
+                name: "Christine Gutmann",
+                slug: "christine-gutmann",
+                avatarUrl: "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/123.jpg"
+            }
+        }
     })
-    booker!: Array<BookerFeedbackResponse>;
+    booking!: Array<BookingHistoryResponse>;
 
 }
